tests/miniJava/neg/005231_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java void ) { return 0 ; } }
